--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "alchemy-sdk": "^2.8.1",
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "ethers": "^5.7.2",
     "hardhat": "^2.14.0",
     "ipfs-http-client": "^60.0.0",
