--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.3.1",
     "pull-file-reader": "^1.0.2",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "wagmi": "^0.12.11",
